[package]
name = "polars_h3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "polars_h3"
crate-type = ["cdylib"]

[dependencies]
polars = { git = "https://github.com/pola-rs/polars", rev = "d00a43203b3ade009a5f858f4c698b6a50f5b1e6", version = "0.33.2", default-features = false }
#pyo3-polars = { version = "*", path = "/home/biel/git-repos/pyo3-polars/pyo3-polars", features = ["derive"] }
pyo3-polars = { git = "https://github.com/pola-rs/pyo3-polars", rev = "0a3df66ce626504e418491cb4b1d31bd3ee7ed6c", features = ["derive"] }
pyo3 = { version = "0.20.0", features = ["extension-module"] }
h3o = "0.4.0"
serde = { version = "1", features = ["derive"] }
