[package]
name = "h3po"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "h3po"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.2", features = ["extension-module", "abi3-py38"] }
pyo3-polars = { version = "0.14.0", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
polars = { version = "0.40.0", default-features = false }
h3o="0.6.4"